--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
+    <p>Just add a new line.</p>
 <div><img src="img_hello_git.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 
